<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_900"
    tools:context=".EmailValidation">

    <View
        android:id="@+id/viewHalf"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/brown_050"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHalf" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/acce_password"
        android:textColor="@color/brown_050"
        android:textSize="24sp"
        android:fontFamily="@font/lexend_tera_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/secondary_outlined_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:paddingStart="24dp"
        android:textSize="20sp"
        android:textColorHint="@color/brown_300"
        android:fontFamily="@font/mulish_bold"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/primary_filled_content"
        android:backgroundTint="@color/brown_900"
        android:fontFamily="@font/mulish_bold"
        android:paddingStart="24dp"
        android:text="@string/sign_in"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/brown_050"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="@+id/signInButton"
        app:layout_constraintTop_toTopOf="@+id/signInButton"
        app:srcCompat="@drawable/ic_next" />

</androidx.constraintlayout.widget.ConstraintLayout>