<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_900"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/app_name"
        android:textColor="@color/brown_050"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_tera_regular"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="24dp"
        android:textAlignment="textStart"
        android:text="@string/sign_in"
        android:textColor="@color/brown_900"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/mulish_bold"
        android:background="@drawable/primary_filled_content"
        android:backgroundTint="@color/brown_050"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="24dp"
        android:textAlignment="textStart"
        android:text="@string/first_access"
        android:textColor="@color/brown_050"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/mulish_bold"
        android:background="@drawable/primary_outlined_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonGoogle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/primary_filled_content"
        android:backgroundTint="@color/brown_050"
        android:contentDescription="@android:string/ok"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/brown_050"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <ImageView
        android:id="@+id/imageGoogle"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGoogle"
        app:layout_constraintEnd_toEndOf="@+id/buttonGoogle"
        app:layout_constraintStart_toStartOf="@+id/buttonGoogle"
        app:layout_constraintTop_toTopOf="@+id/buttonGoogle"
        app:srcCompat="@drawable/google" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonFacebook"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/primary_filled_content"
        android:backgroundTint="@color/brown_050"
        android:contentDescription="@android:string/ok"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/brown_050"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <ImageView
        android:id="@+id/imageFacebook"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFacebook"
        app:layout_constraintEnd_toEndOf="@+id/buttonFacebook"
        app:layout_constraintStart_toStartOf="@+id/buttonFacebook"
        app:layout_constraintTop_toTopOf="@+id/buttonFacebook"
        app:srcCompat="@drawable/facebook" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonUber"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/primary_filled_content"
        android:backgroundTint="@color/brown_050"
        android:contentDescription="@android:string/ok"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/brown_050"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/buttonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <ImageView
        android:id="@+id/imageUber"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUber"
        app:layout_constraintEnd_toEndOf="@+id/buttonUber"
        app:layout_constraintStart_toStartOf="@+id/buttonUber"
        app:layout_constraintTop_toTopOf="@+id/buttonUber"
        app:srcCompat="@drawable/uber" />

</androidx.constraintlayout.widget.ConstraintLayout>